Fixed iframe covering error reporting

--- a/style/common.css
+++ b/style/common.css
@@ -53,3 +53,7 @@ body {
 	margin: 5px;
 	height: 30px;
 }
+
+#header-space {
+	margin-top: 100px;
+}
